[package]
name = "qsv_currency"
version = "0.5.0"
authors = ["Joel Natividad <joel@datHere.com>"]
description = "A library for representing international currencies."
repository = "https://github.com/jqnatividad/currency-rs"
documentation = "https://docs.rs/qsv_currency"
keywords = ["currency", "money", "bank", "international"]
categories = ["parser-implementations", "value-formatting", "internationalization"]
license = "MIT"

[dependencies]
num = "0.4.0"
serde = "1"

[dev-dependencies]
serde_json = "1"
serde_derive = "1"
