[package]
name = "qsv_currency"
version = "0.6.0"
authors = ["Joel Natividad <joel@datHere.com>"]
description = "A library for representing international currencies."
repository = "https://github.com/jqnatividad/currency-rs"
documentation = "https://docs.rs/qsv_currency"
keywords = ["currency", "money", "bank", "international", "iso"]
categories = [
    "parser-implementations",
    "value-formatting",
    "internationalization",
]
license = "MIT"
edition = "2021"

[dependencies]
ahash        = "0.8"
iso_currency = { version = "0.5", features = ["iterator"] }
num          = "0.4"
serde        = "1"

[dev-dependencies]
serde_json   = "1"
serde_derive = "1"
